--- a/style/home.css
+++ b/style/home.css
@@ -18,19 +18,23 @@
     color: #e9e3e6;
 }
 
-div{
-    border: 1px solid red;
+.links{
+    color: #e9e3e6; 
+    padding: 20px 10px;
+    font-size: 20px;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-a{
-    color: #e9e3e6;
+.links:hover{
+    font-weight: bold;
+    color: #87cefa;
+    text-decoration: none;
 }
 
 #logoHome{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid green;
     font-size: 35px;
     font-weight: bold;
     font-family: 'Robotica', sans-serif;
@@ -38,5 +42,22 @@ a{
     color: #101010;
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
     animation: piscar 3s infinite;
+}
+
+.navTop{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+button{
+    height: 40px;
+}
+
+button:hover{
+    background-color: #87cefa;
+    font-weight: bold;
 }
 
